Adicionei a secao contato

--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
         <img src="img/tigre800.png" alt="">
       </div>
     <script src="script.js"></script>
+    <h1>Contato</h1>
+    <p>blablabla</p>
 </body>
 </html>
