--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
     <script src="script.js"></script>
     <h1>Contato</h1>
     <p>blablabla</p>
+
+    <h1>Servicos</h1>
+    <p>blabalalb2</p>
 </body>
 </html>
