Adicionei a Rolagem Suave

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 </head>
 <body>
 <div class="container">
-
   <!---NAVBAR-->
 
   <nav id="navbar">
 
        <ul>
          <img src="img/logo600.png" alt="logo marca" id="logo">
-         <li><a href="#navbar">Home</a></li>
+         <li><a href="#home-n">Home</a></li>
          <li><a href="#sobre">Sobre</a></li>
          <li><a href="#servicos">Serviços</a></li>
          <li><a href="#contato">Contato</a></li>
@@ -32,7 +31,7 @@
 
      <main>
 
-        <div class="esquerda-home">
+        <div class="esquerda-home" id="home-n">
             <h1>O Seu Cachorrinho, merece o <span>Melhor</span> <br> carinho possível!!</h1>
                 <p>Somos a empresa líder em serviços de banho e tosa na região, dedicando-nos exclusivamente ao bem-estar dos seus pets. Nossa especialização não se limita apenas a cães; também oferecemos cuidados excepcionais para animais exóticos, incluindo Tiranossauros Rex, Porcos-Espinhos e Tigres Dente de Sabre. Nossa missão é garantir que seu amado animal de estimação receba o melhor tratamento possível, proporcionando-lhes uma experiência de banho e tosa segura, confortável e de alta qualidade.</p>
          </div>
@@ -45,19 +44,16 @@
 
     <!---CONTAINER DA SOBRE-->
 
-    <div class="container-sobre">
+    <div class="container-sobre" id="sobre">
         <div class="esquerda-sobre">
             <img src="img/cachorro800.png" alt="" srcset="">
         </div>
 
-         <div class="direita-sobre" id="sobre">
+         <div class="direita-sobre">
            <h2>Sobre Nós:</h2>
              <p>Nós, começamos em Bebedouro, e expandimos nossa filial por todo o Brasil, durante 20anos de existencia desse fastshop.Nós, começamos em Bebedouro, e expandimos nossa filial por todo o Brasil, durante 20anos de existencia desse fastshop.Nós, começamos em Bebedouro, e expandimos nossa filial por todo o Brasil, durante 20anos de existencia desse fastshop.Nós, começamos em Bebedouro, e expandimos nossa filial por todo o Brasil, durante 20anos de existencia desse fastshop. </p>
            </div>
         </div>
-
-<!---CONTAINER DE SERVIÇOS-->
-
 
 <!---FOOTER-->
 
