Add, algumas Responsividades

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <main>
 
         <div class="esquerda-home" id="home-n">
-            <h1>O Seu Cachorrinho, merece o <span>Melhor</span> <br> carinho possível!!</h1>
+            <h1>Seu Cachorro, merece o <span>Melhor</span> <br> carinho possível!</h1>
                 <p>Somos a empresa líder em serviços de banho e tosa na região, dedicando-nos exclusivamente ao bem-estar dos seus pets. Nossa especialização não se limita apenas a cães; também oferecemos cuidados excepcionais para animais exóticos, incluindo Tiranossauros Rex, Porcos-Espinhos e Tigres Dente de Sabre. Nossa missão é garantir que seu amado animal de estimação receba o melhor tratamento possível, proporcionando-lhes uma experiência de banho e tosa segura, confortável e de alta qualidade.</p>
          </div>
 
