remove scroll bar appearence

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
   <footer>
      <div class="footer" id="contato">
-       <ul><span>CONTATO:</span>
+       <ul>
+	       <li><span>CONTATO:</span></li>
         <li>Telefone:(99) 9999-999</li>
         <li>Endereco: R. Taltaltal Av. Tal</li>
         <li>Email: fastshop@cachorro.user.com.br</li>
