Add page "sobre"

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-
-
     <title>Document</title>
 </head>
 <body>
 <div class="container">
+
   <!---NAVBAR-->
 
   <nav id="navbar">
@@ -41,7 +39,6 @@
           </div>
     </main>
 
-
     <!---CONTAINER DA SOBRE-->
 
     <div class="container-sobre" id="sobre">
@@ -55,9 +52,22 @@
            </div>
         </div>
 
+        <!----SERVICOS---->
+        <div class="container-servicos">
+          <div class="esquerda-servicos">
+            <h1>Nosso serviço é</h1>
+            <p id="text-serv">especializado em melhor antender os animaiszinhos. Nossa linha eh vegana, vegetariana, hindu do folclore, da babilonia, que nasceu a partir da alquimia hermetica do antigo egito. tudo isso por conta, dos varios casos de dengue e covid que andam acontecendo em Bebedouro-SP</p>
+          </div>
+            <div class="direita-servicos">
+            <img src="img/fastshop.png" alt="tomando banho" id="servicos">  
+          </div>
+        </div>
+
 <!---FOOTER-->
 
-
+	
+	
+	
   <footer>
      <div class="footer" id="contato">
        <ul>
